<resources>
    <string name="app_name">BoardGameCollector</string>
    <string name="btn_add">Add game</string>
    <string name="by_date_a">release date ascending</string>
    <string name="by_name_a">name ascending</string>
    <string name="by_name_d">name descending</string>
    <string name="by_rank_a">rank position ascending</string>
    <string name="txt_sort">Sort by</string>
    <string name="sort_order">sort order</string>
    <string name="game_name">Game title</string>
    <string name="btnSearchBGG">Search BGG</string>
    <string name="release_year">Release year</string>
    <string name="original_name">Original title</string>
    <string name="description">Description</string>
    <string name="ordered">Ordered</string>
    <string name="received">Received</string>
    <string name="paid">Paid</string>
    <string name="suggested_price">Suggested price</string>
    <string name="ean_code">EAN code</string>
    <string name="bgg_id" translatable="false">BGG id</string>
    <string name="production_code">Production code</string>
    <string name="rank">Rank</string>
    <string name="comment">Comment</string>
    <string name="url_to_image">URL to image</string>
    <string name="or_load_from_files">Or load from files</string>
    <string name="load_image_from_url">Load image from URL</string>
    <string name="loaded_image_desc">Loaded image</string>
    <string name="confirm">Confirm</string>
    <string name="full">Full version</string>
    <string name="dlc">DLC</string>
    <string name="playable_dlc">Playable DLC</string>
    <string name="location_comment">Comment to location</string>
    <string name="location">Location</string>
    <string name="group_artist">Artists</string>
    <string name="group_designer">Designers</string>
    <string name="add">Add</string>
    <string name="id">id</string>
    <string name="title_add_artist">Add artist</string>
    <string name="title_add_designer">Add designer</string>
    <string name="loading_data">Loading data</string>
    <string name="processing_data">Processing data</string>
    <string name="waiting_for_data">Waiting for data</string>
    <string name="retrying_in">"Retrying in: "</string>
    <string name="choose_game">Choose a game</string>
    <string name="game_id">Game id:</string>
    <string name="error_occ">Error occurred try again later</string>
    <string name="title">Title</string>
    <string name="name">name</string>
    <string name="adding">Processing game</string>
    <string name="launch_bgg_screen">Launch BGG screen</string>
    <string name="next">Next</string>
    <string name="prev">Previous</string>
    <string name="remove">Remove</string>
    <string name="title_change_artist">Change artist</string>
    <string name="title_change_designer">Change designer</string>
    <string name="import_by_username">Import from BGG by username</string>
    <string name="refresh_stats">Refresh stats</string>
    <string name="username">Username</string>
    <string name="loaded">Loaded</string>
    <string name="by_rank_d">rank position descending</string>
    <string name="by_date_d">release date descending</string>
    <string name="refreshing">Refreshing data</string>
    <string name="locations">Locations</string>
    <string name="add_location">Add location</string>
    <string name="has_image">Has image</string>
    <string name="change_location">Change location</string>
    <string name="save_changes">Save changes</string>
</resources>